objects/ASI_GiftBox_Request_Item__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Category__c</fullName>
        <formula>TEXT(ASI_GiftBox_Request_Item__r.ASI_CRM_Category__c)</formula>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Balance__c</fullName>
        <formula>IF(ISBLANK(ASI_GiftBox_Request_Id__r.ASI_CRM_Customer__r.ASI_CRM_Service_Pack__c) ||  ASI_CRM_Item_Limit__c == &quot;Unrecognized&quot;, &quot;N.A&quot;, Text(VALUE(ASI_CRM_Item_Limit__c) - ASI_CRM_Item_Delivered__c))</formula>
        <label>Item Balance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Delivered__c</fullName>
        <label>Item Delivered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Limit__c</fullName>
        <formula>IF(ISBLANK(ASI_GiftBox_Request_Id__r.ASI_CRM_Customer__r.ASI_CRM_Service_Pack__c), &quot;N.A&quot;, 
IF(ISPICKVAL(ASI_GiftBox_Request_Item__r.ASI_CRM_Category__c, &quot;Podium stand&quot;),
   Text(ASI_GiftBox_Request_Id__r.ASI_CRM_Customer__r.ASI_CRM_Service_Pack__r.ASI_CRM_No_of_Podium_stand__c),
   IF(ISPICKVAL(ASI_GiftBox_Request_Item__r.ASI_CRM_Category__c, &quot;Glorifier&quot;),
      Text(ASI_GiftBox_Request_Id__r.ASI_CRM_Customer__r.ASI_CRM_Service_Pack__r.ASI_CRM_No_of_Glorifier__c),
	  IF(ISPICKVAL(ASI_GiftBox_Request_Item__r.ASI_CRM_Category__c, &quot;Glassware&quot;),
	     Text(ASI_GiftBox_Request_Id__r.ASI_CRM_Customer__r.ASI_CRM_Service_Pack__r.ASI_CRM_No_of_Glassware__c),
		 IF(ISPICKVAL(ASI_GiftBox_Request_Item__r.ASI_CRM_Category__c, &quot;Dice &amp; Dice Cup&quot;),
		    Text(ASI_GiftBox_Request_Id__r.ASI_CRM_Customer__r.ASI_CRM_Service_Pack__r.ASI_CRM_No_of_Dice_Dice_Cup__c),
			IF(ISPICKVAL(ASI_GiftBox_Request_Item__r.ASI_CRM_Category__c, &quot;Drink menus&quot;),
			   Text(ASI_GiftBox_Request_Id__r.ASI_CRM_Customer__r.ASI_CRM_Service_Pack__r.ASI_CRM_No_of_Drink_menus__c),
			   &quot;Unrecognized&quot;
			)
		 )
	  )
   )
)
)</formula>
        <label>Item Limit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Original_Amount__c</fullName>
        <label>Original Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Over_Balance__c</fullName>
        <formula>IF(ASI_CRM_Item_Balance__c == &quot;N.A&quot;, &quot;N.A&quot;,  IF( ASI_GiftBox_Request_Quantity__c &gt; VALUE(ASI_CRM_Item_Balance__c) &amp;&amp; !ISPICKVAL( ASI_GiftBox_Request_Purpose__c , &quot;Return&quot;) , &quot;YES&quot;, &quot;NO&quot;)  )</formula>
        <label>Over Balance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Scheme__c</fullName>
        <label>Promotion Scheme</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Quantity_Adjusted__c</fullName>
        <formula>IF( ISPICKVAL( ASI_GiftBox_Request_Purpose__c , &quot;Return&quot;) , - ASI_GiftBox_Request_Quantity__c , ASI_GiftBox_Request_Quantity__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Adjusted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Subbrand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipName>Gift_Box_POSM_Request_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Trade_A_P_Plan_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trade A&amp;P Plan Item</label>
        <referenceTo>ASI_CRM_Trade_A_P_Plan_Item__c</referenceTo>
        <relationshipName>Gift_Box_POSM_Request_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Charge_Amount__c</fullName>
        <formula>IF( ASI_GiftBox_Request_Charge_To_Customer__c ,
(ASI_GiftBox_Request_Quantity__c * ASI_GiftBox_Request_Item_Unit_Price__c) - ASI_GiftBox_Discount_Amount__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Delivery_Instruction__c</fullName>
        <label>Delivery Instruction</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Discount_Amount__c</fullName>
        <formula>( ASI_GiftBox_Request_Item_Unit_Price__c *  ASI_GiftBox_Discount_Percentage__c ) *  ASI_GiftBox_Request_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Discount_Percentage__c</fullName>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Fiscal_Year__c</fullName>
        <formula>TEXT(ASI_GiftBox_Request_Id__r.ASI_GiftBox_Fiscal_Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Gift_Box_Name__c</fullName>
        <formula>ASI_GiftBox_Request_Item__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gift Box Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Other_Purpose__c</fullName>
        <label>Other Purpose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Region__c</fullName>
        <formula>TEXT( ASI_GiftBox_Request_Id__r.ASI_GiftBox_Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Request_Charge_To_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Charge to Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Request_Id__c</fullName>
        <label>Request Reference</label>
        <referenceTo>ASI_GiftBox_Request_Header__c</referenceTo>
        <relationshipName>Gift_Box_Request_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Request_ItemApproved_Date__c</fullName>
        <label>Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Request_Item_Date__c</fullName>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Request_Item_Remark__c</fullName>
        <label>Remark</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Request_Item_Status_Time__c</fullName>
        <label>Status Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Request_Item_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Waiting for delivery</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Request_Item_Unit_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Request_Item_Warehouse__c</fullName>
        <label>Warehouse</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VTS</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
                <value>
                    <fullName>HN</fullName>
                </value>
                <value>
                    <fullName>DN</fullName>
                </value>
                <value>
                    <fullName>K12</fullName>
                </value>
                <value>
                    <fullName>Intransit</fullName>
                </value>
                <value>
                    <fullName>Supplier Warehouse</fullName>
                </value>
                <value>
                    <fullName>K11</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Request_Item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Item</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI VN POSM Request Item</value>
            </filterItems>
            <filterItems>
                <field>ASI_GiftBox_Inventory_Master__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI GiftBox VN GiftBox Master</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI CRM VN FOC Request Item, ASI CRM VN FOC Request Item, ASI CRM VN Display Listing Request Item</value>
            </filterItems>
            <filterItems>
                <field>ASI_GiftBox_Inventory_Master__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI FOC VN Master</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_GiftBox_Inventory_Master__c</referenceTo>
        <relationshipLabel>All Payment Request Items</relationshipLabel>
        <relationshipName>Gift_Box_Request_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Request_Purpose__c</fullName>
        <label>Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Borrowing</fullName>
                </value>
                <value>
                    <fullName>Display</fullName>
                </value>
                <value>
                    <fullName>FOC</fullName>
                </value>
                <value>
                    <fullName>Forecast (Da Nang)</fullName>
                </value>
                <value>
                    <fullName>Forecast (Ha Noi)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>Return</fullName>
                </value>
                <value>
                    <fullName>Selling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Request_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Status__c</fullName>
        <formula>TEXT(ASI_GiftBox_Request_Id__r.ASI_GiftBox_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>All Payment Request Item</label>
    <nameField>
        <displayFormat>GBRI-{0000000}</displayFormat>
        <label>Request Item Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>All Payment Request Items</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_VN_Capsule_CS_Request_Item</fullName>
        <active>true</active>
        <label>ASI CRM VN Capsule CS Request Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_Capsule_CS_Request_Item_Read_Only</fullName>
        <active>true</active>
        <label>ASI CRM VN Capsule CS Request Item Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_Display_Listing_Request_Item</fullName>
        <active>true</active>
        <label>ASI CRM VN Display Listing Request Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_FOC_Request_Item</fullName>
        <active>true</active>
        <label>ASI CRM VN FOC Request Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_POSM_Request_Item</fullName>
        <active>true</active>
        <label>ASI VN POSM Request Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_Promotion_Request_Item</fullName>
        <active>true</active>
        <label>ASI CRM VN Promotion Request Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_VN_GiftBox_Request_Item</fullName>
        <active>true</active>
        <label>ASI VN GiftBox Request Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_VN_CapsuleCS_BlockNegativeAmt</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
 CONTAINS( RecordType.DeveloperName , &quot;ASI_CRM_VN&quot;),
ASI_CRM_Amount__c &lt; 0
)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Amount__c</errorDisplayField>
        <errorMessage>Amount should not be negative, please contact system administrator</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_VN_CapsuleCS_OverOriginAmount</fullName>
        <active>true</active>
        <errorConditionFormula>ASI_CRM_Amount__c &gt; ASI_CRM_Original_Amount__c</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Amount__c</errorDisplayField>
        <errorMessage>Amount cannot be increased</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_VN_Validate_Master_Item</fullName>
        <active>true</active>
        <errorConditionFormula>(RecordType.DeveloperName == &quot;ASI_CRM_VN_POSM_Request_Item&quot; &amp;&amp;   ISBLANK(TEXT(ASI_GiftBox_Request_Item__r.ASI_CRM_Category__c)) ) || (RecordType.DeveloperName == &quot;ASI_VN_GiftBox_Request_Item&quot; &amp;&amp;   !ISBLANK(TEXT(ASI_GiftBox_Request_Item__r.ASI_CRM_Category__c)) )</errorConditionFormula>
        <errorDisplayField>ASI_GiftBox_Request_Item__c</errorDisplayField>
        <errorMessage>Please select correct master item.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_GiftBox_Req_Item_Item</fullName>
        <active>true</active>
        <description>Lock sales change item after submit</description>
        <errorConditionFormula>AND (
	PRIORVALUE(ASI_GiftBox_Request_Item__c)&lt;&gt;ASI_GiftBox_Request_Item__c ,  
	NOT(ISPICKVAL(ASI_GiftBox_Request_Id__r.ASI_GiftBox_Status__c,&apos;Open&apos; )),
	NOT(INCLUDES($User.BypassTriggers__c, &quot;ASI_GiftBox_VN_HR_User&quot;))
)</errorConditionFormula>
        <errorMessage>Not allowed to change item because the Request is not in &apos;Open&apos; status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_GiftBox_Req_Item_OtherPurpose</fullName>
        <active>true</active>
        <description>Validate Other Purpose need to be entered when purpose is &quot;Other&quot;</description>
        <errorConditionFormula>AND (ISPICKVAL( ASI_GiftBox_Request_Purpose__c , &quot;Other&quot;),
 ISBLANK( ASI_GiftBox_Other_Purpose__c ))</errorConditionFormula>
        <errorMessage>Please enter Other Purpose</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_GiftBox_Req_Item_Upper_Limit_Sales</fullName>
        <active>false</active>
        <errorConditionFormula>IF(  ISPICKVAL(ASI_GiftBox_Request_Item_Warehouse__c , &apos;&apos;) ,if(ASI_GiftBox_Request_Quantity__c &gt; ASI_GiftBox_Request_Item__r.ASI_GiftBox_Item_Available_Quantity__c,true,false),false)</errorConditionFormula>
        <errorMessage>Not enough stock for the gift box selected</errorMessage>
    </validationRules>
</CustomObject>